tests/snapshots/trace_solver@94729000559510988.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatInner
    fallback_to_outer: true
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: true
    eat_mut_inside_shared: true
    ref_binding_on_inherited: ResetBindingMode
    mut_binding_on_inherited: Error
    always_inspect_bm: false
  bundle_name: ergo2024
  request: "[mut x]: &[T]"
---
[mut x] @ s: &[T]
// Applying rule `ConstructorRef`
mut x @ &(*s).0: &T
// Type error for `mut x @ &(*s).0: &T`: MutOnRef
